// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evo-fake-menu-button SSR > renders default 1`] = `
"<span
  class="fake-menu-button"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="fake-menu-button__button btn btn--secondary"
    type="button"
  >
    <span>
      eBay Menu
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--12"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 12 12"
      >
        <path
          clip-rule="evenodd"
          d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-chevron-down-12"
      />
    </svg>
  </button>
  <span
    class="fake-menu-button__menu"
    style="visibility:hidden"
    tabindex="-1"
  >
    <ul
      class="fake-menu__items"
      tabindex="-1"
    >
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 1
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <symbol
              id="GENERATED-1"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                fill-rule="evenodd"
              />
            </symbol>
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
      <li>
        <button
          class="fake-menu-button__item"
          type="button"
        >
          <span>
            item 2
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </button>
      </li>
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 3
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
    </ul>
  </span>
</span>"
`;

exports[`evo-fake-menu-button SSR > renders overflow variant 1`] = `
"<span
  class="fake-menu-button"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    aria-label="button"
    class="fake-menu-button__button icon-btn"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="icon icon--16"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 4.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm0 10a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM9.5 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
        />
      </symbol>
      <use
        href="#icon-overflow-vertical-16"
      />
    </svg>
  </button>
  <span
    class="fake-menu-button__menu"
    style="visibility:hidden"
    tabindex="-1"
  >
    <ul
      class="fake-menu__items"
      tabindex="-1"
    >
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 1
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <symbol
              id="GENERATED-1"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                fill-rule="evenodd"
              />
            </symbol>
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 2
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 3
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
    </ul>
  </span>
</span>"
`;

exports[`evo-fake-menu-button SSR > renders with a custom label 1`] = `
"<span
  class="fake-menu-button"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="fake-menu-button__button btn btn--secondary"
    type="button"
  >
    <span
      class="menu-button-prefix-label"
    >
      <span
        class="custom-label-flag"
      />
    </span>
     
    <span>
      This is the label you first see
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--12"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 12 12"
      >
        <path
          clip-rule="evenodd"
          d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-chevron-down-12"
      />
    </svg>
  </button>
  <span
    class="fake-menu-button__menu"
    style="visibility:hidden"
    tabindex="-1"
  >
    <ul
      class="fake-menu__items"
      tabindex="-1"
    >
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 1 that has very long text
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <symbol
              id="GENERATED-1"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                fill-rule="evenodd"
              />
            </symbol>
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 2
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 3
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
    </ul>
  </span>
</span>"
`;

exports[`evo-fake-menu-button SSR > renders with borderless=true 1`] = `
"<span
  class="fake-menu-button"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="fake-menu-button__button btn btn--borderless"
    type="button"
  >
    <span>
      eBay Menu
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--12"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 12 12"
      >
        <path
          clip-rule="evenodd"
          d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-chevron-down-12"
      />
    </svg>
  </button>
  <span
    class="fake-menu-button__menu"
    style="visibility:hidden"
    tabindex="-1"
  >
    <ul
      class="fake-menu__items"
      tabindex="-1"
    >
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 1
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <symbol
              id="GENERATED-1"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                fill-rule="evenodd"
              />
            </symbol>
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
      <li>
        <button
          class="fake-menu-button__item"
          type="button"
        >
          <span>
            item 2
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </button>
      </li>
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 3
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
    </ul>
  </span>
</span>"
`;

exports[`evo-fake-menu-button SSR > renders with fixWidth=true 1`] = `
"<span
  class="fake-menu-button"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="fake-menu-button__button btn btn--secondary"
    type="button"
  >
    <span>
      eBay Menu
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--12"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 12 12"
      >
        <path
          clip-rule="evenodd"
          d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-chevron-down-12"
      />
    </svg>
  </button>
  <span
    class="fake-menu-button__menu fake-menu-button__menu--fix-width"
    style="visibility:hidden"
    tabindex="-1"
  >
    <ul
      class="fake-menu__items"
      tabindex="-1"
    >
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 1
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <symbol
              id="GENERATED-1"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                fill-rule="evenodd"
              />
            </symbol>
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
      <li>
        <button
          class="fake-menu-button__item"
          type="button"
        >
          <span>
            item 2
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </button>
      </li>
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 3
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
    </ul>
  </span>
</span>"
`;

exports[`evo-fake-menu-button SSR > renders with fixed strategy 1`] = `
"<span
  class="fake-menu-button"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="fake-menu-button__button btn btn--secondary"
    type="button"
  >
    <span>
      eBay Menu
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--12"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 12 12"
      >
        <path
          clip-rule="evenodd"
          d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-chevron-down-12"
      />
    </svg>
  </button>
  <span
    class="fake-menu-button__menu fake-menu-button__menu--fixed"
    style="visibility:hidden"
    tabindex="-1"
  >
    <ul
      class="fake-menu__items"
      tabindex="-1"
    >
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 1
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <symbol
              id="GENERATED-1"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                fill-rule="evenodd"
              />
            </symbol>
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
      <li>
        <button
          class="fake-menu-button__item"
          type="button"
        >
          <span>
            item 2
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </button>
      </li>
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 3
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
    </ul>
  </span>
</span>"
`;

exports[`evo-fake-menu-button SSR > renders with icon and text 1`] = `
"<span
  class="fake-menu-button"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="fake-menu-button__button btn btn--secondary"
    type="button"
  >
    <span>
      Settings 
      <svg
        aria-hidden="true"
        class="icon icon--24"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 24 24"
        >
          <path
            d="M9.763 0h4.473a.98.98 0 0 1 .93.687l.695 2.132c.267.116.528.245.782.384l2.061-.773a.969.969 0 0 1 .338-.062c.292 0 .576.135.767.379l2.788 3.579c.264.337.287.809.057 1.173l-1.202 1.895c.076.28.14.563.192.851l1.885 1.173c.36.224.54.66.447 1.08l-.995 4.464a.989.989 0 0 1-.862.777l-2.197.22a10.09 10.09 0 0 1-.531.681l.28 2.242a1.01 1.01 0 0 1-.548 1.032l-4.028 1.987a.969.969 0 0 1-1.13-.205l-1.54-1.624c-.059.002-.116.006-.174.01a3.61 3.61 0 0 1-.25.011c-.086 0-.17-.006-.252-.011-.058-.004-.115-.008-.172-.01l-1.54 1.625a.97.97 0 0 1-1.13.205l-4.03-1.987c-.38-.187-.6-.602-.547-1.031l.28-2.243a10.103 10.103 0 0 1-.531-.68l-2.199-.22a.991.991 0 0 1-.86-.777l-.995-4.462A1.013 1.013 0 0 1 .47 11.42l1.885-1.173c.05-.29.117-.572.191-.852L1.344 7.5a1.023 1.023 0 0 1 .057-1.173l2.789-3.58a.97.97 0 0 1 1.104-.317l2.06.773a10 10 0 0 1 .785-.385L8.833.687A.982.982 0 0 1 9.763 0Zm4.256 3.462L13.544 2h-3.088l-.474 1.462c-.18.55-.58.996-1.1 1.225-.217.096-.43.201-.632.312a1.948 1.948 0 0 1-1.621.119l-1.41-.53-1.925 2.474.824 1.305c.308.485.398 1.083.25 1.642a7.991 7.991 0 0 0-.156.69 2.033 2.033 0 0 1-.92 1.372L2 12.876l.686 3.088 1.51.15a1.967 1.967 0 0 1 1.408.825c.143.2.284.382.428.552.372.437.543 1.017.472 1.592l-.191 1.543L9.094 22l1.058-1.12a1.956 1.956 0 0 1 1.422-.615h.854c.534 0 1.047.22 1.422.616l1.058 1.118 2.782-1.374-.192-1.543a2.061 2.061 0 0 1 .471-1.592c.145-.17.285-.351.428-.552a1.969 1.969 0 0 1 1.408-.824l1.51-.153.685-3.087-1.292-.804a2.035 2.035 0 0 1-.92-1.373 8.335 8.335 0 0 0-.154-.689 2.07 2.07 0 0 1 .248-1.643l.824-1.304-1.925-2.475-1.41.53a1.931 1.931 0 0 1-1.622-.118 7.794 7.794 0 0 0-.631-.311 2.014 2.014 0 0 1-1.099-1.225ZM7 12a5 5 0 0 1 5-5 5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5Zm8 0c0-1.654-1.346-3-3-3s-3 1.346-3 3 1.346 3 3 3 3-1.346 3-3Z"
          />
        </symbol>
        <use
          href="#icon-settings-24"
        />
      </svg>
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--12"
    >
      <symbol
        id="GENERATED-1"
        viewBox="0 0 12 12"
      >
        <path
          clip-rule="evenodd"
          d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-chevron-down-12"
      />
    </svg>
  </button>
  <span
    class="fake-menu-button__menu"
    style="visibility:hidden"
    tabindex="-1"
  >
    <ul
      class="fake-menu__items"
      tabindex="-1"
    >
      <li>
        <button
          class="fake-menu-button__item"
          type="button"
        >
          <span>
            item 1
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <symbol
              id="GENERATED-2"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                fill-rule="evenodd"
              />
            </symbol>
            <use
              href="#icon-tick-16"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          class="fake-menu-button__item"
          type="button"
        >
          <span>
            item 2
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          class="fake-menu-button__item"
          type="button"
        >
          <span>
            item 3
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </button>
      </li>
    </ul>
  </span>
</span>"
`;

exports[`evo-fake-menu-button SSR > renders with reverse=true 1`] = `
"<span
  class="fake-menu-button"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="fake-menu-button__button btn btn--secondary"
    type="button"
  >
    <span>
      eBay Menu
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--12"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 12 12"
      >
        <path
          clip-rule="evenodd"
          d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-chevron-down-12"
      />
    </svg>
  </button>
  <span
    class="fake-menu-button__menu fake-menu-button__menu--reverse"
    style="visibility:hidden"
    tabindex="-1"
  >
    <ul
      class="fake-menu__items"
      tabindex="-1"
    >
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 1
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <symbol
              id="GENERATED-1"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                fill-rule="evenodd"
              />
            </symbol>
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
      <li>
        <button
          class="fake-menu-button__item"
          type="button"
        >
          <span>
            item 2
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </button>
      </li>
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 3
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
    </ul>
  </span>
</span>"
`;

exports[`evo-fake-menu-button SSR > renders with separators 1`] = `
"<span
  class="fake-menu-button"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="fake-menu-button__button btn btn--secondary"
    type="button"
  >
    <span>
      eBay Menu separator
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--12"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 12 12"
      >
        <path
          clip-rule="evenodd"
          d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-chevron-down-12"
      />
    </svg>
  </button>
  <span
    class="fake-menu-button__menu"
    style="visibility:hidden"
    tabindex="-1"
  >
    <ul
      class="fake-menu__items"
      tabindex="-1"
    >
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 1
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <symbol
              id="GENERATED-1"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                fill-rule="evenodd"
              />
            </symbol>
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 2
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
      <li>
        <hr
          class="fake-menu-button__separator"
          role="separator"
        />
      </li>
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 3
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 4
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
    </ul>
  </span>
</span>"
`;

exports[`evo-fake-menu-button SSR > renders with size=small 1`] = `
"<span
  class="fake-menu-button"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="fake-menu-button__button btn btn--small btn--secondary"
    type="button"
  >
    <span>
      eBay Menu
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--12"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 12 12"
      >
        <path
          clip-rule="evenodd"
          d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-chevron-down-12"
      />
    </svg>
  </button>
  <span
    class="fake-menu-button__menu"
    style="visibility:hidden"
    tabindex="-1"
  >
    <ul
      class="fake-menu__items"
      tabindex="-1"
    >
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 1
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <symbol
              id="GENERATED-1"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                fill-rule="evenodd"
              />
            </symbol>
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
      <li>
        <button
          class="fake-menu-button__item"
          type="button"
        >
          <span>
            item 2
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </button>
      </li>
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 3
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
    </ul>
  </span>
</span>"
`;

exports[`evo-fake-menu-button SSR > renders without toggle icon 1`] = `
"<span
  class="fake-menu-button"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="fake-menu-button__button btn btn--secondary"
    type="button"
  >
    <span>
      eBay Menu
    </span>
  </button>
  <span
    class="fake-menu-button__menu"
    style="visibility:hidden"
    tabindex="-1"
  >
    <ul
      class="fake-menu__items"
      tabindex="-1"
    >
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 1
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <symbol
              id="GENERATED-0"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                fill-rule="evenodd"
              />
            </symbol>
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
      <li>
        <button
          class="fake-menu-button__item"
          type="button"
        >
          <span>
            item 2
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </button>
      </li>
      <li>
        <a
          class="fake-menu-button__item"
          href="#"
        >
          <span>
            item 3
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <use
              href="#icon-tick-16"
            />
          </svg>
        </a>
      </li>
    </ul>
  </span>
</span>"
`;
